--- a/english-for-kids/package.json
+++ b/english-for-kids/package.json
@@ -10,6 +10,7 @@
     "dev": "webpack-dev-server --history-api-fallback --inline --open",
     "build": "npm run clear -s && webpack --progress",
     "lint": "eslint ./**/*.js",
+    "lint:fix": "eslint ./**/*.js --fix",
     "clear": "del-cli dist"
   },
   "author": "Smarrti",
